--- a/src/style.css
+++ b/src/style.css
@@ -2,12 +2,12 @@
     font-family: "JetBrainsMono Nerd Font";   
 }
 
-.main {
-    width: 100%;
-    height: 100%;
+body {
+    background-color: #000000;
 }
 
-.display {
-    width: 100%;
-    height: 100%;
+pre {
+    margin: 0;
+    height: 21px;
+    color: white;
 }
