--- a/src/style.css
+++ b/src/style.css
@@ -11,6 +11,10 @@
 .app, #main, html, body {
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: auto;
 }
 
 .app:focus {
