--- a/src/style.css
+++ b/src/style.css
@@ -9,7 +9,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    overflow: auto;
 }
 
 .app:focus {
@@ -25,11 +24,20 @@ pre {
     margin: 0;
     color: white;
     font-size: 14px;
+    max-height: var(--cell-height);
+    overflow: hidden;
 }
 
 span {
     color: var(--fg);
     background-color: var(--bg);
+}
+
+.cellspan {
+    max-width: var(--cell-width);
+    max-height: var(--cell-height);
+    display: inline-block;
+    overflow: hidden;
 }
 
 ::selection {
@@ -56,6 +64,6 @@ span {
 }
 
 .cursor {
-    position: relative;
+    position: absolute; /* BAD */
     background: white;
 }
