--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+:root {
+    --cell-width: 1000px;
+    --cell-height: 1000px;
+}
+
 * {
     font-family: "JetBrainsMono Nerd Font";  
     overflow-x:hidden;
@@ -43,8 +48,8 @@ span {
 }
 
 .cellspan {
-    max-width: var(--cell-width);
-    max-height: var(--cell-height);
+    /* max-width: var(--cell-width); */
+    /* max-height: var(--cell-height); */
     font-size: 14px;
     display: inline-block;
     overflow: hidden;
