--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-:root {
-    --cell-width: 1000px;
-    --cell-height: 1000px;
-}
-
 * {
     font-family: "JetBrainsMono Nerd Font";  
     overflow-x:hidden;
@@ -60,8 +55,16 @@ span {
 }
 
 .command {
-    border-bottom: 1px white solid;
     padding: var(--padding);
+    padding-top: calc(var(--padding) * 2);
+    padding-bottom: calc(var(--padding) * 2);
+}
+
+hr {
+    border: none;
+    border-top: 1px solid #333;
+    margin: auto;
+    width: calc(100% - 15px);
 }
 
 .command-fatal, .command-not-found, .command-error {
