--- a/css/style.css
+++ b/css/style.css
@@ -4,10 +4,6 @@
 }
 
 
-dim {
-    font-weight: lighter;
-}
-
 /* SPLIT STYLES */
 .terminal-split {
     --padding: 4px;
@@ -17,6 +13,14 @@ dim {
 
 .terminal-split:focus {
     outline: none;
+}
+
+.tab:nth-child(2n) {
+    background: var(--bg1);
+}
+
+.tab {
+    background: var(--fg);
 }
 
 /* COMMAND STYLES */
@@ -31,8 +35,6 @@ dim {
 }
 
 .command-button {
-    position: absolute;
-    /*mask*/
     background-color: var(--black);
     color: var(--white);
     border: none;
@@ -109,6 +111,10 @@ body {
     font-size: 14px;
     display: inline-block;
     overflow: visible;
+}
+
+dim {
+    font-weight: lighter;
 }
 
 .doublesize .cellspan {
@@ -200,6 +206,10 @@ span {
         opacity: 0;
     } 
 }
+
+/* .tabs { */
+/*     width: 100%; */
+/* } */
 
 /*DEBUG MENU*/
 .terminal-debug {
