--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@
     padding: var(--padding);
     padding-top: calc(var(--padding) * 2);
     padding-bottom: calc(var(--padding) * 2);
+    position: relative;
 }
 
 .command-fatal, .command-not-found, .command-error {
@@ -42,10 +43,13 @@
 
 .command-bar {
     width: 100%;
-    height: 100%;
     display: flex;
     justify-content: end;
     align-items: end;
+    position: absolute;
+    bottom: 1px;
+    right: 1px;
+    z-index: 1;
 }
 
 hr {
