--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,18 @@
 * {
     font-family: "JetBrainsMono Nerd Font";  
     overflow-x:hidden;
-    tab-index: -1;
 }
 
 /* menu */
 .menu {
     position: absolute;
-    width: 780px;
-    height: 550px;
+    width: 100%;
+    height: 100%;
     background: #0000006b;
     z-index: 100;
-    border: 1px #ffffff33 solid;
-    box-shadow: 0px 0px 20px 0px #000000d1;
-    border-radius: 10px;
+    /* border: 1px #ffffff33 solid; */
+    /* box-shadow: 0px 0px 20px 0px #000000d1; */
+    /* border-radius: 10px; */
     color: var(--white);
     backdrop-filter: blur(7px);
     display: flex;
@@ -27,7 +26,6 @@
 
 #menuheader {
     z-index: 101;
-    cursor: move;
 }
 
 .menu input[type=number] {
@@ -165,7 +163,7 @@ body {
 }
 
 .app:focus {
-    outline: none;
+    border: none;
 }
 
 /* CURSOR STYLE */
