--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,17 @@
     overflow-x:hidden;
 }
 
+.commandpalette {
+    width: 400px;
+    max-width: 90%;
+    position: absolute;
+    z-index: 100;
+    height: 40px;
+    background: var(--bg0);
+    border-radius: 6px;
+    box-shadow: 0 2px 2px 2px #00000033;
+}
+
 select {
     overflow: hidden;
     border: 1px solid var(--fg4);
