--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
     max-width: 90%;
     position: absolute;
     z-index: 100;
-    height: 40px;
+    min-height: 40px;
     background: var(--bg0);
     border-radius: 6px;
     box-shadow: 0 2px 2px 2px #00000033;
