--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
     box-shadow: 0 2px 2px 2px #00000033;
     top: 25px;
     left: calc(50vw - 200px);
+    padding: 8px;
 }
 
 select {
@@ -59,6 +60,27 @@ button {
     background: var(--bg0);
     color: var(--fg0);
     border-radius: 4px;
+}
+
+.commandsearch {
+    width: calc(100% - 16px);
+    height: 25px;
+}
+
+.searchresult {
+    width: calc(100% - 16px);
+    height: 30px;
+    color: var(--fg0);
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    padding-left: 16px;
+    border-radius: 2px;
+    font-size: 16px;
+}
+
+.searchresult.selected {
+    background: var(--bg3);
 }
 
 .keybutton {
@@ -135,7 +157,7 @@ option:checked {
     z-index: 101;
 }
 
-.menu input {
+input {
     border-radius: 4px;
     background: transparent;
     color: #ffffff;
