--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 * {
-    font-family: "JetBrainsMono Nerd Font";  
-    overflow-x:hidden;
+    font-family: "JetBrainsMono Nerd Font";
+    overflow-x: hidden;
 }
 
 .commandpalette {
@@ -28,20 +28,21 @@ select {
 .menu option {
     padding-left: 16px;
     background: var(--bg0);
-  accent-color: var(--fg0);
-  &::before {
-    content: ""; 
-    font-size: 16px;
-    left: -8px;
-    position: relative;
-  }
+    accent-color: var(--fg0);
+
+    &::before {
+        content: "";
+        font-size: 16px;
+        left: -8px;
+        position: relative;
+    }
 }
 
 form {
     overflow: visible;
 }
 
-.keybindings  {
+.keybindings {
     overflow: visible;
 }
 
@@ -72,6 +73,8 @@ button {
     width: 100%;
     scroll-behavior: smooth;
     border: none;
+    overflow: scroll;
+    overflow-x: hidden;
 }
 
 .searchresults:focus-visible {
@@ -79,7 +82,7 @@ button {
 }
 
 .searchresult {
-    width: calc(100% - 16px);
+    width: calc(100% - 22px);
     height: 30px;
     color: var(--fg0);
     justify-content: center;
@@ -92,6 +95,25 @@ button {
 
 .searchresult:checked {
     background: var(--bg3);
+}
+
+/* scrollbar */
+::-webkit-scrollbar {
+    width: 10px;
+    border-radius: 4px;
+}
+
+::-webkit-scrollbar-track {
+    background: var(--bg1);
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--bg3);
+    border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--bg4);
 }
 
 .keybutton {
@@ -123,7 +145,7 @@ input[type=checkbox]:checked {
     accent-color: var(--fg4);
 }
 
-.keybutton:focus { 
+.keybutton:focus {
     box-shadow: 0 1px 0 0.5px var(--fg2);
     top: 1px;
 }
@@ -134,11 +156,12 @@ input[type=checkbox]:checked {
 }
 
 .menu option:checked {
-  background-color: var(--fg4); 
-  color: var(--bg0);
-  &::before {
-    content: ""; 
-  }
+    background-color: var(--fg4);
+    color: var(--bg0);
+
+    &::before {
+        content: "";
+    }
 }
 
 /* menu */
@@ -308,8 +331,10 @@ input {
     position: relative;
 }
 
-.command-fatal, .command-not-found, .command-error {
-    border-left-inline: var(--light-red) 2px solid; 
+.command-fatal,
+.command-not-found,
+.command-error {
+    border-left-inline: var(--light-red) 2px solid;
 }
 
 .command-button {
@@ -360,7 +385,10 @@ body {
     margin-left: 10px;
 }
 
-.app, #main, html, body {
+.app,
+#main,
+html,
+body {
     width: 100%;
     height: 100%;
     display: flex;
@@ -379,9 +407,11 @@ body {
 
 /* CURSOR STYLE */
 .cursor {
-    position: absolute; /* BAD */
+    position: absolute;
+    /* BAD */
     background: white;
-    /*transition: left 0.1s ease-out, top 0.1s ease-out*/;
+    /*transition: left 0.1s ease-out, top 0.1s ease-out*/
+    ;
 }
 
 /* TEXT STYLES */
@@ -452,7 +482,7 @@ span {
 }
 
 .wrapped {
-    /* border? */    
+    /* border? */
 }
 
 .hide {
@@ -484,7 +514,7 @@ span {
 @keyframes blink {
     50% {
         opacity: 0;
-    } 
+    }
 }
 
 /* .tabs { */
