--- a/css/palette.css
+++ b/css/palette.css
@@ -1,6 +1,6 @@
 :root {
-    --fg-default: var(--white);
-    --bg-default: var(--black);
+    --fg-default: var(--fg);
+    --bg-default: var(--bg);
 
     --palette-1: var(--red); 
     --palette-2: var(--green); 
