--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,12 @@ input[type=checkbox] {
     margin: 0 !important;
 }
 
+input[type=color] {
+    border: 1px solid var(--fg2);
+    padding: 0;
+    margin: 0;
+}
+
 input[type=checkbox]:checked {
     appearance: revert;
     accent-color: var(--fg4);
