--- a/css/gruvbox.css
+++ b/css/gruvbox.css
@@ -2,14 +2,14 @@
     --white: #ebdbb2;
     --black: #1d2021;
     --grey: #928374;
-    --light-grey: #a89984;
+    --bright-grey: #a89984;
 
-    --light-red: #fb4934;
-    --light-green: #b8bb26;
-    --light-yellow: #fabd2f;
-    --light-blue: #83a598;
-    --light-cyan: #8ec07c;
-    --light-purple: #d3869b;
+    --bright-red: #fb4934;
+    --bright-green: #b8bb26;
+    --bright-yellow: #fabd2f;
+    --bright-blue: #83a598;
+    --bright-cyan: #8ec07c;
+    --bright-purple: #d3869b;
 
     --red: #cc241d;
     --green: #98971a;
