--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
 * {
     font-family: "JetBrainsMono Nerd Font";
     overflow-x: hidden;
+    --fg: var(--fg0);
+    --bg: var(--bg0);
 }
 
 p {
     color: var(--fg0);
+    background: var(--bg);
     margin: 8px;
 }
 
@@ -476,11 +479,13 @@ body {
 
 /* TEXT STYLES */
 .cellspan {
-    width: var(--cell-width);
-    height: var(--cell-height);
+    /* width: var(--cell-width); */
+    /* height: var(--cell-height); */
     font-size: 14px;
     display: inline-block;
     overflow: visible;
+    color: var(--fg);
+    background: var(--bg);
 }
 
 dim {
@@ -506,8 +511,7 @@ pre {
 }
 
 span {
-    color: var(--fg0);
-    background-color: var(--bg0);
+    color: var(--fg);
 }
 
 /*Cell Attributes*/
